cmake_minimum_required(VERSION 3.27)
project(CPP_Programs)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Programs main.cpp)
add_executable(Array Array.cpp)
add_executable(Recursion Recursion.cpp)
add_executable(Hanoi Recursion/towerOfHanoi.cpp)
add_executable(SumOfDigits Recursion/SumOfDigits.cpp)
add_executable(Largest Array/largestElement.cpp)
add_executable(Sorted Array/Sorted.cpp)
add_executable(Reverse Array/Reversal.cpp)
add_executable(binarySearch Searching/BinarySearch.cpp)
add_executable(test_bin Searching/Test.cpp)
add_executable(BinarySearchRecursion Searching/BinarySearchRecursion.cpp)
add_executable(SquareRoot Searching/SquareRoot.cpp)
